volume slider overflow fix & tweet text change

--- a/WebManager/static/player_style.css
+++ b/WebManager/static/player_style.css
@@ -24,7 +24,7 @@
 #volume-group{
     left:40px;
     bottom:3px;
-    width: 20px;
+    width: 15px;
     overflow: hidden;
     padding: 6px 10px 6px 6px;
     user-select: none;
@@ -45,6 +45,9 @@
 .ui-slider .ui-slider-handle{
     width: 13px;
     height: 13px;
+    user-select: none;
+    moz-user-select: none;
+    -webkit-user-select: none;
 }
 .loading-bg{
     position: fixed;
